# A-complete-RAG-Software

./: .gitignore  README.md  app.py  frontend.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/text_files/: ai.txt  python.txt  rag.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
src/: embeddings.py  mongodb.py  search.py  vectorstore.py
tests/: test_frontend.py
